fixing index offscreen container

--- a/assets/base/about.scss
+++ b/assets/base/about.scss
@@ -81,5 +81,6 @@
   }
   .skills_main{
     width: 70%;
+    font: 15px;
   }
 }
