--- a/assets/base/index.scss
+++ b/assets/base/index.scss
@@ -57,4 +57,11 @@
 	.profile_content{
 		flex-direction: column;
 	}
+  .container_bio{
+    font-size: 20px;
+  }
+
+  .glitch{
+    font-size: 20px;
+  }
 }
